src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMI block DOT
Rule 2     block -> declarations BEGIN statement_list END
Rule 3     declarations -> declarations declaration
Rule 4     declarations -> empty
Rule 5     declaration -> const_declaration
Rule 6     declaration -> type_declaration
Rule 7     declaration -> label_declaration
Rule 8     declaration -> var_declaration
Rule 9     declaration -> function_declaration
Rule 10    declaration -> procedure_declaration
Rule 11    const_declaration -> CONST const_list
Rule 12    const_list -> const_list CONST_ITEM SEMI
Rule 13    const_list -> CONST_ITEM SEMI
Rule 14    CONST_ITEM -> ID EQ expression
Rule 15    type_declaration -> TYPE type_list
Rule 16    type_list -> type_list type_item SEMI
Rule 17    type_list -> type_item SEMI
Rule 18    type_item -> ID EQ type
Rule 19    label_declaration -> LABEL label_list SEMI
Rule 20    label_list -> label_list COMMA INTEGER
Rule 21    label_list -> INTEGER
Rule 22    var_declaration -> VAR var_list
Rule 23    var_list -> var_list var_item
Rule 24    var_list -> var_item
Rule 25    var_item -> ID_LIST COLON type SEMI
Rule 26    function_declaration -> FUNCTION ID LPAREN params RPAREN COLON type SEMI block SEMI
Rule 27    procedure_declaration -> PROCEDURE ID LPAREN params RPAREN SEMI block SEMI
Rule 28    type -> packed_type
Rule 29    type -> simple_type
Rule 30    type -> id_type
Rule 31    type -> array_type
Rule 32    type -> enum_type
Rule 33    type -> subrange_type
Rule 34    type -> record_type
Rule 35    type -> set_type
Rule 36    type -> file_type
Rule 37    packed_type -> PACKED type
Rule 38    simple_type -> TIPO
Rule 39    id_type -> ID
Rule 40    array_type -> ARRAY LBRACKET range RBRACKET OF type
Rule 41    enum_type -> LPAREN ID_LIST RPAREN
Rule 42    subrange_type -> const_expr RANGE const_expr
Rule 43    record_type -> RECORD field_list variant_part END
Rule 44    record_type -> RECORD field_list END
Rule 45    set_type -> SET OF type
Rule 46    file_type -> FILE OF type
Rule 47    range -> const_expr RANGE const_expr
Rule 48    const_expr -> INTEGER
Rule 49    const_expr -> REAL
Rule 50    const_expr -> BOOLEAN
Rule 51    const_expr -> CHAR
Rule 52    const_expr -> TEXTO
Rule 53    const_expr -> ID
Rule 54    field_list -> field_list var_item
Rule 55    field_list -> var_item
Rule 56    variant_part -> CASE ID COLON TIPO OF variant_list
Rule 57    variant_list -> variant_list variant_item SEMI
Rule 58    variant_list -> variant_item SEMI
Rule 59    variant_item -> constant COLON LPAREN field_list RPAREN
Rule 60    ID_LIST -> ID
Rule 61    ID_LIST -> ID_LIST COMMA ID
Rule 62    params -> param_list
Rule 63    params -> empty
Rule 64    param_list -> param_list SEMI param
Rule 65    param_list -> param
Rule 66    param -> ID_LIST COLON type
Rule 67    param -> VAR ID_LIST COLON type
Rule 68    param -> CONST ID_LIST COLON type
Rule 69    statement_list -> statement_list SEMI statement
Rule 70    statement_list -> statement
Rule 71    compound -> BEGIN statement_list END
Rule 72    statement -> assignment
Rule 73    statement -> procedure_call
Rule 74    statement -> if_statement
Rule 75    statement -> for_statement
Rule 76    statement -> while_statement
Rule 77    statement -> repeat_statement
Rule 78    statement -> case_statement
Rule 79    statement -> with_statement
Rule 80    statement -> goto_statement
Rule 81    statement -> labeled_statement
Rule 82    statement -> compound
Rule 83    statement -> empty
Rule 84    assignment -> variable ASSIGN expression
Rule 85    variable -> variable LBRACKET expression RBRACKET
Rule 86    variable -> variable DOT ID
Rule 87    variable -> ID
Rule 88    procedure_call -> ID LPAREN expression_list RPAREN
Rule 89    procedure_call -> ID
Rule 90    if_statement -> IF expression THEN statement ELSE statement
Rule 91    if_statement -> IF expression THEN statement
Rule 92    for_statement -> FOR ID ASSIGN expression TO expression DO statement
Rule 93    for_statement -> FOR ID ASSIGN expression DOWNTO expression DO statement
Rule 94    while_statement -> WHILE expression DO statement
Rule 95    repeat_statement -> REPEAT statement_list UNTIL expression
Rule 96    case_statement -> CASE expression OF case_list END
Rule 97    case_list -> case_list case_item SEMI
Rule 98    case_list -> case_item SEMI
Rule 99    case_item -> constant_list COLON statement_list
Rule 100   constant_list -> const_expr
Rule 101   constant_list -> constant_list COMMA const_expr
Rule 102   with_statement -> WITH variable_list DO statement
Rule 103   variable_list -> variable
Rule 104   variable_list -> variable_list COMMA variable
Rule 105   goto_statement -> GOTO INTEGER
Rule 106   labeled_statement -> INTEGER COLON statement
Rule 107   constant -> INTEGER
Rule 108   constant -> REAL
Rule 109   constant -> BOOLEAN
Rule 110   constant -> CHAR
Rule 111   constant -> TEXTO
Rule 112   expression -> variable
Rule 113   expression -> constant
Rule 114   expression -> TIPO LPAREN expression_list RPAREN
Rule 115   expression -> ID LPAREN expression_list RPAREN
Rule 116   expression -> LPAREN expression RPAREN
Rule 117   expression -> LBRACKET expression_list RBRACKET
Rule 118   expression -> NOT expression
Rule 119   expression -> expression COLON expression
Rule 120   expression -> expression PLUS expression
Rule 121   expression -> expression MINUS expression
Rule 122   expression -> expression TIMES expression
Rule 123   expression -> expression DIVIDE expression
Rule 124   expression -> expression DIV expression
Rule 125   expression -> expression MOD expression
Rule 126   expression -> expression EQ expression
Rule 127   expression -> expression NE expression
Rule 128   expression -> expression LT expression
Rule 129   expression -> expression LE expression
Rule 130   expression -> expression GT expression
Rule 131   expression -> expression GE expression
Rule 132   expression -> expression IN expression
Rule 133   expression -> expression AND expression
Rule 134   expression -> expression OR expression
Rule 135   expression_list -> expression
Rule 136   expression_list -> expression_list COMMA expression
Rule 137   empty -> <empty>

Terminals, with rules where they appear

AND                  : 133
ARRAY                : 40
ASSIGN               : 84 92 93
BEGIN                : 2 71
BOOLEAN              : 50 109
CASE                 : 56 96
CHAR                 : 51 110
COLON                : 25 26 56 59 66 67 68 99 106 119
COMMA                : 20 61 101 104 136
CONST                : 11 68
DIV                  : 124
DIVIDE               : 123
DO                   : 92 93 94 102
DOT                  : 1 86
DOWNTO               : 93
ELSE                 : 90
END                  : 2 43 44 71 96
EQ                   : 14 18 126
FILE                 : 46
FOR                  : 92 93
FUNCTION             : 26
GE                   : 131
GOTO                 : 105
GT                   : 130
ID                   : 1 14 18 26 27 39 53 56 60 61 86 87 88 89 92 93 115
IF                   : 90 91
IN                   : 132
INTEGER              : 20 21 48 105 106 107
LABEL                : 19
LBRACKET             : 40 85 117
LE                   : 129
LPAREN               : 26 27 41 59 88 114 115 116
LT                   : 128
MINUS                : 121
MOD                  : 125
NE                   : 127
NOT                  : 118
OF                   : 40 45 46 56 96
OR                   : 134
PACKED               : 37
PLUS                 : 120
PROCEDURE            : 27
PROGRAM              : 1
RANGE                : 42 47
RBRACKET             : 40 85 117
REAL                 : 49 108
RECORD               : 43 44
REPEAT               : 95
RPAREN               : 26 27 41 59 88 114 115 116
SEMI                 : 1 12 13 16 17 19 25 26 26 27 27 57 58 64 69 97 98
SET                  : 45
TEXTO                : 52 111
THEN                 : 90 91
TIMES                : 122
TIPO                 : 38 56 114
TO                   : 92
TYPE                 : 15
UNTIL                : 95
VAR                  : 22 67
WHILE                : 94
WITH                 : 102
error                : 

Nonterminals, with rules where they appear

CONST_ITEM           : 12 13
ID_LIST              : 25 41 61 66 67 68
array_type           : 31
assignment           : 72
block                : 1 26 27
case_item            : 97 98
case_list            : 96 97
case_statement       : 78
compound             : 82
const_declaration    : 5
const_expr           : 42 42 47 47 100 101
const_list           : 11 12
constant             : 59 113
constant_list        : 99 101
declaration          : 3
declarations         : 2 3
empty                : 4 63 83
enum_type            : 32
expression           : 14 84 85 90 91 92 92 93 93 94 95 96 116 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 135 136
expression_list      : 88 114 115 117 136
field_list           : 43 44 54 59
file_type            : 36
for_statement        : 75
function_declaration : 9
goto_statement       : 80
id_type              : 30
if_statement         : 74
label_declaration    : 7
label_list           : 19 20
labeled_statement    : 81
packed_type          : 28
param                : 64 65
param_list           : 62 64
params               : 26 27
procedure_call       : 73
procedure_declaration : 10
program              : 0
range                : 40
record_type          : 34
repeat_statement     : 77
set_type             : 35
simple_type          : 29
statement            : 69 70 90 90 91 92 93 94 102 106
statement_list       : 2 69 71 95 99
subrange_type        : 33
type                 : 18 25 26 37 40 45 46 66 67 68
type_declaration     : 6
type_item            : 16 17
type_list            : 15 16
var_declaration      : 8
var_item             : 23 24 54 55
var_list             : 22 23
variable             : 84 85 86 103 104 112
variable_list        : 102 104
variant_item         : 57 58
variant_list         : 56 57
variant_part         : 43
while_statement      : 76
with_statement       : 79

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMI block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMI block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMI block DOT

    SEMI            shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMI . block DOT
    (2) block -> . declarations BEGIN statement_list END
    (3) declarations -> . declarations declaration
    (4) declarations -> . empty
    (137) empty -> .

    BEGIN           reduce using rule 137 (empty -> .)
    CONST           reduce using rule 137 (empty -> .)
    TYPE            reduce using rule 137 (empty -> .)
    LABEL           reduce using rule 137 (empty -> .)
    VAR             reduce using rule 137 (empty -> .)
    FUNCTION        reduce using rule 137 (empty -> .)
    PROCEDURE       reduce using rule 137 (empty -> .)

    block                          shift and go to state 5
    declarations                   shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID SEMI block . DOT

    DOT             shift and go to state 8


state 6

    (2) block -> declarations . BEGIN statement_list END
    (3) declarations -> declarations . declaration
    (5) declaration -> . const_declaration
    (6) declaration -> . type_declaration
    (7) declaration -> . label_declaration
    (8) declaration -> . var_declaration
    (9) declaration -> . function_declaration
    (10) declaration -> . procedure_declaration
    (11) const_declaration -> . CONST const_list
    (15) type_declaration -> . TYPE type_list
    (19) label_declaration -> . LABEL label_list SEMI
    (22) var_declaration -> . VAR var_list
    (26) function_declaration -> . FUNCTION ID LPAREN params RPAREN COLON type SEMI block SEMI
    (27) procedure_declaration -> . PROCEDURE ID LPAREN params RPAREN SEMI block SEMI

    BEGIN           shift and go to state 9
    CONST           shift and go to state 17
    TYPE            shift and go to state 18
    LABEL           shift and go to state 19
    VAR             shift and go to state 20
    FUNCTION        shift and go to state 21
    PROCEDURE       shift and go to state 22

    declaration                    shift and go to state 10
    const_declaration              shift and go to state 11
    type_declaration               shift and go to state 12
    label_declaration              shift and go to state 13
    var_declaration                shift and go to state 14
    function_declaration           shift and go to state 15
    procedure_declaration          shift and go to state 16

state 7

    (4) declarations -> empty .

    BEGIN           reduce using rule 4 (declarations -> empty .)
    CONST           reduce using rule 4 (declarations -> empty .)
    TYPE            reduce using rule 4 (declarations -> empty .)
    LABEL           reduce using rule 4 (declarations -> empty .)
    VAR             reduce using rule 4 (declarations -> empty .)
    FUNCTION        reduce using rule 4 (declarations -> empty .)
    PROCEDURE       reduce using rule 4 (declarations -> empty .)


state 8

    (1) program -> PROGRAM ID SEMI block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMI block DOT .)


state 9

    (2) block -> declarations BEGIN . statement_list END
    (69) statement_list -> . statement_list SEMI statement
    (70) statement_list -> . statement
    (72) statement -> . assignment
    (73) statement -> . procedure_call
    (74) statement -> . if_statement
    (75) statement -> . for_statement
    (76) statement -> . while_statement
    (77) statement -> . repeat_statement
    (78) statement -> . case_statement
    (79) statement -> . with_statement
    (80) statement -> . goto_statement
    (81) statement -> . labeled_statement
    (82) statement -> . compound
    (83) statement -> . empty
    (84) assignment -> . variable ASSIGN expression
    (88) procedure_call -> . ID LPAREN expression_list RPAREN
    (89) procedure_call -> . ID
    (90) if_statement -> . IF expression THEN statement ELSE statement
    (91) if_statement -> . IF expression THEN statement
    (92) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (93) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (94) while_statement -> . WHILE expression DO statement
    (95) repeat_statement -> . REPEAT statement_list UNTIL expression
    (96) case_statement -> . CASE expression OF case_list END
    (102) with_statement -> . WITH variable_list DO statement
    (105) goto_statement -> . GOTO INTEGER
    (106) labeled_statement -> . INTEGER COLON statement
    (71) compound -> . BEGIN statement_list END
    (137) empty -> .
    (85) variable -> . variable LBRACKET expression RBRACKET
    (86) variable -> . variable DOT ID
    (87) variable -> . ID

    ID              shift and go to state 39
    IF              shift and go to state 40
    FOR             shift and go to state 41
    WHILE           shift and go to state 42
    REPEAT          shift and go to state 43
    CASE            shift and go to state 44
    WITH            shift and go to state 45
    GOTO            shift and go to state 46
    INTEGER         shift and go to state 47
    BEGIN           shift and go to state 23
    END             reduce using rule 137 (empty -> .)
    SEMI            reduce using rule 137 (empty -> .)

    statement_list                 shift and go to state 24
    statement                      shift and go to state 25
    assignment                     shift and go to state 26
    procedure_call                 shift and go to state 27
    if_statement                   shift and go to state 28
    for_statement                  shift and go to state 29
    while_statement                shift and go to state 30
    repeat_statement               shift and go to state 31
    case_statement                 shift and go to state 32
    with_statement                 shift and go to state 33
    goto_statement                 shift and go to state 34
    labeled_statement              shift and go to state 35
    compound                       shift and go to state 36
    empty                          shift and go to state 37
    variable                       shift and go to state 38

state 10

    (3) declarations -> declarations declaration .

    BEGIN           reduce using rule 3 (declarations -> declarations declaration .)
    CONST           reduce using rule 3 (declarations -> declarations declaration .)
    TYPE            reduce using rule 3 (declarations -> declarations declaration .)
    LABEL           reduce using rule 3 (declarations -> declarations declaration .)
    VAR             reduce using rule 3 (declarations -> declarations declaration .)
    FUNCTION        reduce using rule 3 (declarations -> declarations declaration .)
    PROCEDURE       reduce using rule 3 (declarations -> declarations declaration .)


state 11

    (5) declaration -> const_declaration .

    BEGIN           reduce using rule 5 (declaration -> const_declaration .)
    CONST           reduce using rule 5 (declaration -> const_declaration .)
    TYPE            reduce using rule 5 (declaration -> const_declaration .)
    LABEL           reduce using rule 5 (declaration -> const_declaration .)
    VAR             reduce using rule 5 (declaration -> const_declaration .)
    FUNCTION        reduce using rule 5 (declaration -> const_declaration .)
    PROCEDURE       reduce using rule 5 (declaration -> const_declaration .)


state 12

    (6) declaration -> type_declaration .

    BEGIN           reduce using rule 6 (declaration -> type_declaration .)
    CONST           reduce using rule 6 (declaration -> type_declaration .)
    TYPE            reduce using rule 6 (declaration -> type_declaration .)
    LABEL           reduce using rule 6 (declaration -> type_declaration .)
    VAR             reduce using rule 6 (declaration -> type_declaration .)
    FUNCTION        reduce using rule 6 (declaration -> type_declaration .)
    PROCEDURE       reduce using rule 6 (declaration -> type_declaration .)


state 13

    (7) declaration -> label_declaration .

    BEGIN           reduce using rule 7 (declaration -> label_declaration .)
    CONST           reduce using rule 7 (declaration -> label_declaration .)
    TYPE            reduce using rule 7 (declaration -> label_declaration .)
    LABEL           reduce using rule 7 (declaration -> label_declaration .)
    VAR             reduce using rule 7 (declaration -> label_declaration .)
    FUNCTION        reduce using rule 7 (declaration -> label_declaration .)
    PROCEDURE       reduce using rule 7 (declaration -> label_declaration .)


state 14

    (8) declaration -> var_declaration .

    BEGIN           reduce using rule 8 (declaration -> var_declaration .)
    CONST           reduce using rule 8 (declaration -> var_declaration .)
    TYPE            reduce using rule 8 (declaration -> var_declaration .)
    LABEL           reduce using rule 8 (declaration -> var_declaration .)
    VAR             reduce using rule 8 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 8 (declaration -> var_declaration .)
    PROCEDURE       reduce using rule 8 (declaration -> var_declaration .)


state 15

    (9) declaration -> function_declaration .

    BEGIN           reduce using rule 9 (declaration -> function_declaration .)
    CONST           reduce using rule 9 (declaration -> function_declaration .)
    TYPE            reduce using rule 9 (declaration -> function_declaration .)
    LABEL           reduce using rule 9 (declaration -> function_declaration .)
    VAR             reduce using rule 9 (declaration -> function_declaration .)
    FUNCTION        reduce using rule 9 (declaration -> function_declaration .)
    PROCEDURE       reduce using rule 9 (declaration -> function_declaration .)


state 16

    (10) declaration -> procedure_declaration .

    BEGIN           reduce using rule 10 (declaration -> procedure_declaration .)
    CONST           reduce using rule 10 (declaration -> procedure_declaration .)
    TYPE            reduce using rule 10 (declaration -> procedure_declaration .)
    LABEL           reduce using rule 10 (declaration -> procedure_declaration .)
    VAR             reduce using rule 10 (declaration -> procedure_declaration .)
    FUNCTION        reduce using rule 10 (declaration -> procedure_declaration .)
    PROCEDURE       reduce using rule 10 (declaration -> procedure_declaration .)


state 17

    (11) const_declaration -> CONST . const_list
    (12) const_list -> . const_list CONST_ITEM SEMI
    (13) const_list -> . CONST_ITEM SEMI
    (14) CONST_ITEM -> . ID EQ expression

    ID              shift and go to state 50

    const_list                     shift and go to state 48
    CONST_ITEM                     shift and go to state 49

state 18

    (15) type_declaration -> TYPE . type_list
    (16) type_list -> . type_list type_item SEMI
    (17) type_list -> . type_item SEMI
    (18) type_item -> . ID EQ type

    ID              shift and go to state 53

    type_list                      shift and go to state 51
    type_item                      shift and go to state 52

state 19

    (19) label_declaration -> LABEL . label_list SEMI
    (20) label_list -> . label_list COMMA INTEGER
    (21) label_list -> . INTEGER

    INTEGER         shift and go to state 55

    label_list                     shift and go to state 54

state 20

    (22) var_declaration -> VAR . var_list
    (23) var_list -> . var_list var_item
    (24) var_list -> . var_item
    (25) var_item -> . ID_LIST COLON type SEMI
    (60) ID_LIST -> . ID
    (61) ID_LIST -> . ID_LIST COMMA ID

    ID              shift and go to state 59

    var_list                       shift and go to state 56
    var_item                       shift and go to state 57
    ID_LIST                        shift and go to state 58

state 21

    (26) function_declaration -> FUNCTION . ID LPAREN params RPAREN COLON type SEMI block SEMI

    ID              shift and go to state 60


state 22

    (27) procedure_declaration -> PROCEDURE . ID LPAREN params RPAREN SEMI block SEMI

    ID              shift and go to state 61


state 23

    (71) compound -> BEGIN . statement_list END
    (69) statement_list -> . statement_list SEMI statement
    (70) statement_list -> . statement
    (72) statement -> . assignment
    (73) statement -> . procedure_call
    (74) statement -> . if_statement
    (75) statement -> . for_statement
    (76) statement -> . while_statement
    (77) statement -> . repeat_statement
    (78) statement -> . case_statement
    (79) statement -> . with_statement
    (80) statement -> . goto_statement
    (81) statement -> . labeled_statement
    (82) statement -> . compound
    (83) statement -> . empty
    (84) assignment -> . variable ASSIGN expression
    (88) procedure_call -> . ID LPAREN expression_list RPAREN
    (89) procedure_call -> . ID
    (90) if_statement -> . IF expression THEN statement ELSE statement
    (91) if_statement -> . IF expression THEN statement
    (92) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (93) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (94) while_statement -> . WHILE expression DO statement
    (95) repeat_statement -> . REPEAT statement_list UNTIL expression
    (96) case_statement -> . CASE expression OF case_list END
    (102) with_statement -> . WITH variable_list DO statement
    (105) goto_statement -> . GOTO INTEGER
    (106) labeled_statement -> . INTEGER COLON statement
    (71) compound -> . BEGIN statement_list END
    (137) empty -> .
    (85) variable -> . variable LBRACKET expression RBRACKET
    (86) variable -> . variable DOT ID
    (87) variable -> . ID

    ID              shift and go to state 39
    IF              shift and go to state 40
    FOR             shift and go to state 41
    WHILE           shift and go to state 42
    REPEAT          shift and go to state 43
    CASE            shift and go to state 44
    WITH            shift and go to state 45
    GOTO            shift and go to state 46
    INTEGER         shift and go to state 47
    BEGIN           shift and go to state 23
    END             reduce using rule 137 (empty -> .)
    SEMI            reduce using rule 137 (empty -> .)

    statement_list                 shift and go to state 62
    statement                      shift and go to state 25
    assignment                     shift and go to state 26
    procedure_call                 shift and go to state 27
    if_statement                   shift and go to state 28
    for_statement                  shift and go to state 29
    while_statement                shift and go to state 30
    repeat_statement               shift and go to state 31
    case_statement                 shift and go to state 32
    with_statement                 shift and go to state 33
    goto_statement                 shift and go to state 34
    labeled_statement              shift and go to state 35
    compound                       shift and go to state 36
    empty                          shift and go to state 37
    variable                       shift and go to state 38

state 24

    (2) block -> declarations BEGIN statement_list . END
    (69) statement_list -> statement_list . SEMI statement

    END             shift and go to state 63
    SEMI            shift and go to state 64


state 25

    (70) statement_list -> statement .

    END             reduce using rule 70 (statement_list -> statement .)
    SEMI            reduce using rule 70 (statement_list -> statement .)
    UNTIL           reduce using rule 70 (statement_list -> statement .)


state 26

    (72) statement -> assignment .

    END             reduce using rule 72 (statement -> assignment .)
    SEMI            reduce using rule 72 (statement -> assignment .)
    UNTIL           reduce using rule 72 (statement -> assignment .)
    ELSE            reduce using rule 72 (statement -> assignment .)


state 27

    (73) statement -> procedure_call .

    END             reduce using rule 73 (statement -> procedure_call .)
    SEMI            reduce using rule 73 (statement -> procedure_call .)
    UNTIL           reduce using rule 73 (statement -> procedure_call .)
    ELSE            reduce using rule 73 (statement -> procedure_call .)


state 28

    (74) statement -> if_statement .

    END             reduce using rule 74 (statement -> if_statement .)
    SEMI            reduce using rule 74 (statement -> if_statement .)
    UNTIL           reduce using rule 74 (statement -> if_statement .)
    ELSE            reduce using rule 74 (statement -> if_statement .)


state 29

    (75) statement -> for_statement .

    END             reduce using rule 75 (statement -> for_statement .)
    SEMI            reduce using rule 75 (statement -> for_statement .)
    UNTIL           reduce using rule 75 (statement -> for_statement .)
    ELSE            reduce using rule 75 (statement -> for_statement .)


state 30

    (76) statement -> while_statement .

    END             reduce using rule 76 (statement -> while_statement .)
    SEMI            reduce using rule 76 (statement -> while_statement .)
    UNTIL           reduce using rule 76 (statement -> while_statement .)
    ELSE            reduce using rule 76 (statement -> while_statement .)


state 31

    (77) statement -> repeat_statement .

    END             reduce using rule 77 (statement -> repeat_statement .)
    SEMI            reduce using rule 77 (statement -> repeat_statement .)
    UNTIL           reduce using rule 77 (statement -> repeat_statement .)
    ELSE            reduce using rule 77 (statement -> repeat_statement .)


state 32

    (78) statement -> case_statement .

    END             reduce using rule 78 (statement -> case_statement .)
    SEMI            reduce using rule 78 (statement -> case_statement .)
    UNTIL           reduce using rule 78 (statement -> case_statement .)
    ELSE            reduce using rule 78 (statement -> case_statement .)


state 33

    (79) statement -> with_statement .

    END             reduce using rule 79 (statement -> with_statement .)
    SEMI            reduce using rule 79 (statement -> with_statement .)
    UNTIL           reduce using rule 79 (statement -> with_statement .)
    ELSE            reduce using rule 79 (statement -> with_statement .)


state 34

    (80) statement -> goto_statement .

    END             reduce using rule 80 (statement -> goto_statement .)
    SEMI            reduce using rule 80 (statement -> goto_statement .)
    UNTIL           reduce using rule 80 (statement -> goto_statement .)
    ELSE            reduce using rule 80 (statement -> goto_statement .)


state 35

    (81) statement -> labeled_statement .

    END             reduce using rule 81 (statement -> labeled_statement .)
    SEMI            reduce using rule 81 (statement -> labeled_statement .)
    UNTIL           reduce using rule 81 (statement -> labeled_statement .)
    ELSE            reduce using rule 81 (statement -> labeled_statement .)


state 36

    (82) statement -> compound .

    END             reduce using rule 82 (statement -> compound .)
    SEMI            reduce using rule 82 (statement -> compound .)
    UNTIL           reduce using rule 82 (statement -> compound .)
    ELSE            reduce using rule 82 (statement -> compound .)


state 37

    (83) statement -> empty .

    END             reduce using rule 83 (statement -> empty .)
    SEMI            reduce using rule 83 (statement -> empty .)
    UNTIL           reduce using rule 83 (statement -> empty .)
    ELSE            reduce using rule 83 (statement -> empty .)


state 38

    (84) assignment -> variable . ASSIGN expression
    (85) variable -> variable . LBRACKET expression RBRACKET
    (86) variable -> variable . DOT ID

    ASSIGN          shift and go to state 65
    LBRACKET        shift and go to state 66
    DOT             shift and go to state 67


state 39

    (88) procedure_call -> ID . LPAREN expression_list RPAREN
    (89) procedure_call -> ID .
    (87) variable -> ID .

    LPAREN          shift and go to state 68
    END             reduce using rule 89 (procedure_call -> ID .)
    SEMI            reduce using rule 89 (procedure_call -> ID .)
    UNTIL           reduce using rule 89 (procedure_call -> ID .)
    ELSE            reduce using rule 89 (procedure_call -> ID .)
    ASSIGN          reduce using rule 87 (variable -> ID .)
    LBRACKET        reduce using rule 87 (variable -> ID .)
    DOT             reduce using rule 87 (variable -> ID .)


state 40

    (90) if_statement -> IF . expression THEN statement ELSE statement
    (91) if_statement -> IF . expression THEN statement
    (112) expression -> . variable
    (113) expression -> . constant
    (114) expression -> . TIPO LPAREN expression_list RPAREN
    (115) expression -> . ID LPAREN expression_list RPAREN
    (116) expression -> . LPAREN expression RPAREN
    (117) expression -> . LBRACKET expression_list RBRACKET
    (118) expression -> . NOT expression
    (119) expression -> . expression COLON expression
    (120) expression -> . expression PLUS expression
    (121) expression -> . expression MINUS expression
    (122) expression -> . expression TIMES expression
    (123) expression -> . expression DIVIDE expression
    (124) expression -> . expression DIV expression
    (125) expression -> . expression MOD expression
    (126) expression -> . expression EQ expression
    (127) expression -> . expression NE expression
    (128) expression -> . expression LT expression
    (129) expression -> . expression LE expression
    (130) expression -> . expression GT expression
    (131) expression -> . expression GE expression
    (132) expression -> . expression IN expression
    (133) expression -> . expression AND expression
    (134) expression -> . expression OR expression
    (85) variable -> . variable LBRACKET expression RBRACKET
    (86) variable -> . variable DOT ID
    (87) variable -> . ID
    (107) constant -> . INTEGER
    (108) constant -> . REAL
    (109) constant -> . BOOLEAN
    (110) constant -> . CHAR
    (111) constant -> . TEXTO

    TIPO            shift and go to state 72
    ID              shift and go to state 74
    LPAREN          shift and go to state 73
    LBRACKET        shift and go to state 75
    NOT             shift and go to state 76
    INTEGER         shift and go to state 77
    REAL            shift and go to state 78
    BOOLEAN         shift and go to state 79
    CHAR            shift and go to state 80
    TEXTO           shift and go to state 81

    expression                     shift and go to state 69
    variable                       shift and go to state 70
    constant                       shift and go to state 71

state 41

    (92) for_statement -> FOR . ID ASSIGN expression TO expression DO statement
    (93) for_statement -> FOR . ID ASSIGN expression DOWNTO expression DO statement

    ID              shift and go to state 82


state 42

    (94) while_statement -> WHILE . expression DO statement
    (112) expression -> . variable
    (113) expression -> . constant
    (114) expression -> . TIPO LPAREN expression_list RPAREN
    (115) expression -> . ID LPAREN expression_list RPAREN
    (116) expression -> . LPAREN expression RPAREN
    (117) expression -> . LBRACKET expression_list RBRACKET
    (118) expression -> . NOT expression
    (119) expression -> . expression COLON expression
    (120) expression -> . expression PLUS expression
    (121) expression -> . expression MINUS expression
    (122) expression -> . expression TIMES expression
    (123) expression -> . expression DIVIDE expression
    (124) expression -> . expression DIV expression
    (125) expression -> . expression MOD expression
    (126) expression -> . expression EQ expression
    (127) expression -> . expression NE expression
    (128) expression -> . expression LT expression
    (129) expression -> . expression LE expression
    (130) expression -> . expression GT expression
    (131) expression -> . expression GE expression
    (132) expression -> . expression IN expression
    (133) expression -> . expression AND expression
    (134) expression -> . expression OR expression
    (85) variable -> . variable LBRACKET expression RBRACKET
    (86) variable -> . variable DOT ID
    (87) variable -> . ID
    (107) constant -> . INTEGER
    (108) constant -> . REAL
    (109) constant -> . BOOLEAN
    (110) constant -> . CHAR
    (111) constant -> . TEXTO

    TIPO            shift and go to state 72
    ID              shift and go to state 74
    LPAREN          shift and go to state 73
    LBRACKET        shift and go to state 75
    NOT             shift and go to state 76
    INTEGER         shift and go to state 77
    REAL            shift and go to state 78
    BOOLEAN         shift and go to state 79
    CHAR            shift and go to state 80
    TEXTO           shift and go to state 81

    expression                     shift and go to state 83
    variable                       shift and go to state 70
    constant                       shift and go to state 71

state 43

    (95) repeat_statement -> REPEAT . statement_list UNTIL expression
    (69) statement_list -> . statement_list SEMI statement
    (70) statement_list -> . statement
    (72) statement -> . assignment
    (73) statement -> . procedure_call
    (74) statement -> . if_statement
    (75) statement -> . for_statement
    (76) statement -> . while_statement
    (77) statement -> . repeat_statement
    (78) statement -> . case_statement
    (79) statement -> . with_statement
    (80) statement -> . goto_statement
    (81) statement -> . labeled_statement
    (82) statement -> . compound
    (83) statement -> . empty
    (84) assignment -> . variable ASSIGN expression
    (88) procedure_call -> . ID LPAREN expression_list RPAREN
    (89) procedure_call -> . ID
    (90) if_statement -> . IF expression THEN statement ELSE statement
    (91) if_statement -> . IF expression THEN statement
    (92) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (93) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (94) while_statement -> . WHILE expression DO statement
    (95) repeat_statement -> . REPEAT statement_list UNTIL expression
    (96) case_statement -> . CASE expression OF case_list END
    (102) with_statement -> . WITH variable_list DO statement
    (105) goto_statement -> . GOTO INTEGER
    (106) labeled_statement -> . INTEGER COLON statement
    (71) compound -> . BEGIN statement_list END
    (137) empty -> .
    (85) variable -> . variable LBRACKET expression RBRACKET
    (86) variable -> . variable DOT ID
    (87) variable -> . ID

    ID              shift and go to state 39
    IF              shift and go to state 40
    FOR             shift and go to state 41
    WHILE           shift and go to state 42
    REPEAT          shift and go to state 43
    CASE            shift and go to state 44
    WITH            shift and go to state 45
    GOTO            shift and go to state 46
    INTEGER         shift and go to state 47
    BEGIN           shift and go to state 23
    UNTIL           reduce using rule 137 (empty -> .)
    SEMI            reduce using rule 137 (empty -> .)
